--- a/assets/style/shop.css
+++ b/assets/style/shop.css
@@ -12,10 +12,11 @@ section div {
 .img-left {
   object-fit: cover;
   height: 100vh;
-  margin-top: -110px;
+  margin-top: -130px;
 }
 
 .img-right {
+  object-fit: cover;
   height: 60vh;
   margin-top: -10vh;
 }
